--- a/index.html
+++ b/index.html
@@ -5,8 +5,6 @@ I love you
 i live in Pakistan
 i am a o level tracher
 my passion is programming
-<<<<<<< HEAD
 i love badminton
-=======
 i love cricket
->>>>>>> feature1
+i am pakistani
